Sign up activity

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/blue_light"
-  tools:context=".SignInActivity">
+  tools:context=".SignUpActivity">
 
   <TextView
     android:id="@+id/title"
@@ -14,9 +14,9 @@
     android:layout_above="@+id/subtitle"
     android:layout_centerHorizontal="true"
     android:fontFamily="@font/comfortaa_bold"
-    android:text="@string/sign_in_activity_title"
+    android:text="@string/sign_up_activity_title"
     android:textColor="@color/white"
-    android:textSize="40sp" />
+    android:textSize="36sp" />
 
   <TextView
     android:id="@+id/subtitle"
@@ -25,7 +25,7 @@
     android:layout_above="@+id/card"
     android:layout_centerHorizontal="true"
     android:fontFamily="@font/comfortaa_bold"
-    android:text="@string/sign_in_activity_subtitle"
+    android:text="@string/sign_up_activity_subtitle"
     android:textAlignment="center"
     android:textColor="@color/blue_dark" />
 
@@ -41,13 +41,39 @@
     android:background="@drawable/default_radius">
 
     <TextView
+      android:id="@+id/input_name_label"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignStart="@+id/input_name"
+      android:layout_marginTop="40dp"
+      android:fontFamily="@font/comfortaa_regular"
+      android:text="@string/sign_up_activity_name"
+      android:textColor="@color/black"
+      android:textSize="14sp" />
+
+    <EditText
+      android:id="@+id/input_name"
+      android:layout_width="match_parent"
+      android:layout_height="65dp"
+      android:layout_below="@+id/input_name_label"
+      android:layout_marginLeft="20dp"
+      android:layout_marginRight="20dp"
+      android:background="@drawable/input_blue_focus"
+      android:fontFamily="@font/comfortaa_regular"
+      android:paddingStart="12dp"
+      android:paddingEnd="12dp"
+      android:singleLine="true"
+      android:textCursorDrawable="@color/black" />
+
+    <TextView
       android:id="@+id/input_email_label"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_below="@+id/input_name"
       android:layout_alignStart="@+id/input_email"
-      android:layout_marginTop="40dp"
+      android:layout_marginTop="15dp"
       android:fontFamily="@font/comfortaa_regular"
-      android:text="@string/sign_in_activity_email"
+      android:text="@string/sign_up_activity_email"
       android:textColor="@color/black"
       android:textSize="14sp" />
 
@@ -62,8 +88,8 @@
       android:fontFamily="@font/comfortaa_regular"
       android:paddingStart="12dp"
       android:paddingEnd="12dp"
-      android:textCursorDrawable="@color/black"
-      android:singleLine="true" />
+      android:singleLine="true"
+      android:textCursorDrawable="@color/black" />
 
     <TextView
       android:id="@+id/input_password_label"
@@ -73,7 +99,7 @@
       android:layout_alignStart="@+id/input_email"
       android:layout_marginTop="15dp"
       android:fontFamily="@font/comfortaa_regular"
-      android:text="@string/sign_in_activity_password"
+      android:text="@string/sign_up_activity_password"
       android:textColor="@color/black"
       android:textSize="14sp" />
 
@@ -89,8 +115,8 @@
       android:inputType="textPassword"
       android:paddingStart="12dp"
       android:paddingEnd="12dp"
-      android:textCursorDrawable="@color/black"
-      android:singleLine="true" />
+      android:singleLine="true"
+      android:textCursorDrawable="@color/black" />
 
     <Button
       android:id="@+id/button_submit"
@@ -105,7 +131,7 @@
       android:backgroundTint="@color/blue_button"
       android:fontFamily="@font/comfortaa_bold"
       android:letterSpacing="0"
-      android:text="@string/sign_in_activity_submit"
+      android:text="Submit"
       android:textAllCaps="false"
       android:textColor="@color/white"
       android:textSize="16sp" />
