--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,7 +5,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/blue_light"
-  tools:context=".SignInActivity">
+  tools:context=".activities.SignInActivity">
 
   <TextView
     android:id="@+id/title"
