--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
   <color name="light_gray">#EDEDED</color>
+
+  <color name="light_green">#6BCA7A</color>
 </resources>
