--- a/app/src/main/res/layout/activity_details_party.xml
+++ b/app/src/main/res/layout/activity_details_party.xml
@@ -98,7 +98,8 @@
                     android:paddingStart="12dp"
                     android:paddingEnd="12dp"
                     android:singleLine="true"
-                    android:textCursorDrawable="@color/black" />
+                    android:textCursorDrawable="@color/black"
+                    android:inputType="number"/>
 
 
             </RelativeLayout>
@@ -129,7 +130,8 @@
                     android:paddingStart="12dp"
                     android:paddingEnd="12dp"
                     android:singleLine="true"
-                    android:textCursorDrawable="@color/black" />
+                    android:textCursorDrawable="@color/black"
+                    android:inputType="number"/>
 
             </RelativeLayout>
         </RelativeLayout>
