--- a/app/src/main/res/layout/activity_members.xml
+++ b/app/src/main/res/layout/activity_members.xml
@@ -59,7 +59,7 @@
             android:layout_below="@+id/member_email_label"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/input_blue_focus"
+            android:background="@drawable/input_brown_focus"
             android:fontFamily="@font/comfortaa_regular"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
@@ -97,8 +97,8 @@
             android:layout_below="@id/separator"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
-            tools:listitem="@layout/activity_members_list_item">
-        </androidx.recyclerview.widget.RecyclerView>
+            android:layout_marginBottom="30dp"
+            tools:listitem="@layout/activity_members_list_item"></androidx.recyclerview.widget.RecyclerView>
 
     </RelativeLayout>
 
