--- a/app/src/main/res/layout/activity_members_list_item.xml
+++ b/app/src/main/res/layout/activity_members_list_item.xml
@@ -13,17 +13,17 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_icon_1"></ImageView>
+            android:src="@drawable/ic_icon_1"/>
 
         <TextView
-            android:id="@+id/party_people_amount"
+            android:id="@+id/member_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="Name"
-            android:textAllCaps="true"
-            android:textSize="12sp"
-            android:textStyle="bold"></TextView>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="1dp"
+            android:textAllCaps="false"
+            android:textSize="13sp"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 </RelativeLayout>
