--- a/app/src/main/res/layout/activity_my_invites_list_item.xml
+++ b/app/src/main/res/layout/activity_my_invites_list_item.xml
@@ -19,42 +19,18 @@
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold"></TextView>
-
-        <LinearLayout
-            android:id="@+id/party_invite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/party_name"
-            android:layout_marginTop="5dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_icon_1"></ImageView>
-
-            <TextView
-                android:id="@+id/party_manager"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="Some Text"
-                android:textAllCaps="true"
-                android:textSize="12sp"
-                android:textStyle="bold"></TextView>
-        </LinearLayout>
-
+            android:textStyle="bold"/>
         <View
             android:id="@+id/separator"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_below="@id/party_invite"
+            android:layout_below="@id/party_name"
             android:layout_marginHorizontal="25dp"
             android:layout_marginVertical="20dp"
             android:background="@color/light_gray" />
 
         <LinearLayout
-            android:id="@+id/party_cost"
+            android:id="@+id/invite_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/separator"
@@ -77,7 +53,7 @@
                 android:id="@+id/button_accept"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="90dp"
+                android:layout_marginLeft="50dp"
                 android:layout_toRightOf="@+id/button_deny"
                 android:background="@drawable/default_radius"
                 android:backgroundTint="@color/green_dark"
