--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,10 +55,11 @@
         android:id="@+id/add_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/brown_dark"
+        app:borderWidth="2dp"
+        app:backgroundTint="@color/brown_dark"
         android:elevation="6dp"
         android:src="@drawable/ic_add_party"
         android:visibility="invisible"
@@ -70,10 +71,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/add_fab"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/brown_dark"
+        app:borderWidth="2dp"
+        app:backgroundTint="@color/brown_dark"
         android:elevation="6dp"
         android:src="@drawable/ic_invite"
         android:visibility="invisible"
@@ -84,11 +86,12 @@
         android:id="@+id/main_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/brown_dark"
+        app:borderWidth="2dp"
+        app:backgroundTint="@color/brown_dark"
         android:elevation="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
