--- a/app/src/main/res/layout/activity_my_invites_list_item.xml
+++ b/app/src/main/res/layout/activity_my_invites_list_item.xml
@@ -15,10 +15,11 @@
       android:id="@+id/party_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="PARTY 1"
-      android:textAllCaps="true"
+      android:fontFamily="@font/comfortaa_bold"
+      android:text="Festa 1"
+      android:textAllCaps="false"
       android:textColor="@color/black"
-      android:textSize="16sp"
+      android:textSize="17sp"
       android:textStyle="bold" />
 
     <View
@@ -26,23 +27,30 @@
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:layout_below="@id/party_name"
-      android:layout_marginHorizontal="25dp"
-      android:layout_marginVertical="20dp"
+      android:layout_marginVertical="10dp"
       android:background="@color/light_gray" />
 
-    <LinearLayout
-      android:id="@+id/invite_button"
+    <TextView
+      android:id="@+id/text_status"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_below="@+id/separator"
-      android:layout_marginLeft="30dp">
+      android:layout_below="@id/separator"
+      android:fontFamily="@font/comfortaa_bold"
+      android:text="Accepted"
+      android:textSize="14sp" />
+
+    <RelativeLayout
+      android:id="@+id/invite_button"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/text_status">
 
       <Button
         android:id="@+id/button_deny"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/partyName"
-        android:layout_marginLeft="20dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:width="150dp"
         android:background="@drawable/button_bordered_green"
         android:fontFamily="@font/comfortaa_bold"
         android:text="@string/my_invites_item_deny"
@@ -53,9 +61,9 @@
       <Button
         android:id="@+id/button_accept"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_toRightOf="@+id/button_deny"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:width="150dp"
         android:background="@drawable/default_radius"
         android:backgroundTint="@color/green_dark"
         android:fontFamily="@font/comfortaa_bold"
@@ -63,7 +71,7 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="16sp" />
-    </LinearLayout>
+    </RelativeLayout>
   </RelativeLayout>
 
 </RelativeLayout>
