--- a/app/src/main/res/layout/activity_costs.xml
+++ b/app/src/main/res/layout/activity_costs.xml
@@ -123,8 +123,8 @@
       android:layout_height="wrap_content"
       android:layout_below="@id/separator"
       android:layout_marginHorizontal="20dp"
-      android:layout_marginTop="10dp"
-      tools:listitem="@layout/activity_costs_list_item"></androidx.recyclerview.widget.RecyclerView>
+      android:layout_marginVertical="5dp"
+      tools:listitem="@layout/activity_costs_list_item" />
 
   </RelativeLayout>
 
