--- a/app/src/main/res/layout/activity_costs_list_item.xml
+++ b/app/src/main/res/layout/activity_costs_list_item.xml
@@ -5,26 +5,41 @@
   android:layout_height="wrap_content"
   android:layout_marginBottom="10dp">
 
-  <LinearLayout
+  <RelativeLayout
     android:id="@+id/party_cost"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp">
 
-    <ImageView
+    <TextView
+      android:id="@+id/cost_description"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:src="@drawable/ic_icon"></ImageView>
+      android:fontFamily="@font/comfortaa_bold"
+      android:text="Carne"
+      android:textFontWeight="600"
+      android:textSize="15sp" />
+
+    <ImageView
+      android:id="@+id/cost_icon"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/cost_description"
+      android:src="@drawable/ic_icon" />
 
     <TextView
       android:id="@+id/cost_price"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginLeft="5dp"
-      android:text="PRICE"
+      android:layout_alignTop="@+id/cost_icon"
+      android:layout_marginStart="5dp"
+      android:layout_marginTop="-3dp"
+      android:layout_toEndOf="@+id/cost_icon"
+      android:fontFamily="@font/comfortaa_bold"
+      android:text="500"
       android:textAllCaps="true"
-      android:textSize="12sp"
-      android:textStyle="bold"></TextView>
+      android:textSize="14sp"
+      android:textStyle="bold" />
 
-  </LinearLayout>
+  </RelativeLayout>
 </RelativeLayout>
