--- a/app/src/main/res/layout/activity_main_list_item.xml
+++ b/app/src/main/res/layout/activity_main_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/card"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
@@ -15,45 +16,48 @@
       android:id="@+id/party_name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Some Text"
-      android:textAllCaps="true"
+      android:layout_marginBottom="5dp"
+      android:fontFamily="@font/comfortaa_bold"
+      android:textAllCaps="false"
       android:textColor="@color/black"
       android:textSize="16sp"
-      android:textStyle="bold"></TextView>
+      android:textStyle="bold" />
 
     <TextView
       android:id="@+id/party_location"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/party_name"
-      android:text="Some Text"
+      android:fontFamily="@font/comfortaa_bold"
       android:textAllCaps="true"
       android:textColor="@color/black"
       android:textSize="10sp"
-      android:textStyle="bold"></TextView>
+      android:textStyle="bold"
+      tools:ignore="SmallSp" />
 
     <LinearLayout
       android:id="@+id/party_people"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/party_location"
-      android:layout_marginTop="5dp">
+      android:layout_marginTop="8dp">
 
       <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_icon_1"></ImageView>
+        android:layout_height="18dp"
+        android:layout_marginTop="3dp"
+        android:src="@drawable/ic_icon_1" />
 
       <TextView
         android:id="@+id/party_people_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:text="Some Text"
-        android:textAllCaps="true"
+        android:layout_marginStart="5dp"
+        android:fontFamily="@font/comfortaa_regular"
+        android:textAllCaps="false"
         android:textColor="@color/green_light"
-        android:textSize="12sp"
-        android:textStyle="bold"></TextView>
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -67,18 +71,20 @@
       <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_icon"></ImageView>
+        android:layout_marginTop="3dp"
+        android:src="@drawable/ic_icon" />
 
       <TextView
         android:id="@+id/party_cost_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:text="Some Text"
-        android:textAllCaps="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="5dp"
+        android:fontFamily="@font/comfortaa_regular"
+        android:textAllCaps="false"
         android:textColor="@color/green_light"
-        android:textSize="12sp"
-        android:textStyle="bold"></TextView>
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     </LinearLayout>
 
