--- a/app/src/main/res/layout/activity_members_list_item.xml
+++ b/app/src/main/res/layout/activity_members_list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
-  android:layout_marginBottom="10dp">
+  android:layout_marginBottom="12dp">
 
   <LinearLayout
     android:id="@+id/party_people"
@@ -11,18 +11,21 @@
     android:layout_marginTop="5dp">
 
     <ImageView
+      android:layout_marginTop="3dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/ic_icon_1" />
 
     <TextView
       android:id="@+id/member_name"
+      android:fontFamily="@font/comfortaa_bold"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginLeft="10dp"
+      android:layout_marginStart="5dp"
       android:layout_marginTop="1dp"
       android:textAllCaps="false"
-      android:textSize="13sp"
+      android:textSize="14sp"
+      android:textColor="@color/black"
       android:textStyle="bold" />
 
   </LinearLayout>
