--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,7 @@
     <item name="colorOnSecondary">@color/white</item>
 
     <!-- Status bar color. -->
-    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
+    <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
 
   </style>
 </resources>
