--- a/app/src/main/res/layout/activity_members.xml
+++ b/app/src/main/res/layout/activity_members.xml
@@ -98,7 +98,7 @@
       android:layout_marginHorizontal="20dp"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="30dp"
-      tools:listitem="@layout/activity_members_list_item"></androidx.recyclerview.widget.RecyclerView>
+      tools:listitem="@layout/activity_members_list_item" />
 
   </RelativeLayout>
 
